# modules/user-search-svc/src/main/scala/com/jc/user/search/module/api/UserSearchOpenApi.scala
@@ -1,16 +1,28 @@
 package com.jc.user.search.module.api
 
-import com.jc.user.domain.UserEntity
-import com.jc.user.search.api.openapi.definitions.{PropertySuggestion, TermSuggestion, UserSuggestResponse}
+import com.jc.user.domain.{DepartmentEntity, UserEntity}
+import com.jc.user.search.api.openapi.definitions.{
+  Department,
+  DepartmentSearchResponse,
+  DepartmentSuggestResponse,
+  PropertySuggestion,
+  TermSuggestion,
+  User,
+  UserSearchResponse,
+  UserSuggestResponse
+}
 import com.jc.user.search.api.openapi.user.{
+  GetDepartmentResponse,
   GetUserResponse,
+  SearchDepartmentsResponse,
   SearchUsersResponse,
+  SuggestDepartmentsResponse,
   SuggestUsersResponse,
   UserHandler,
   UserResource
 }
 import com.jc.user.search.model.ExpectedFailure
-import com.jc.user.search.module.repo.{SearchRepository, UserSearchRepo}
+import com.jc.user.search.module.repo.{DepartmentSearchRepo, SearchRepository, UserSearchRepo}
 import org.http4s.HttpRoutes
 import org.http4s.server.Router
 import sttp.tapir.swagger.http4s.SwaggerHttp4s
@@ -18,12 +30,74 @@ import zio.ZIO
 
 import scala.io.Source
 
-final class UserSearchOpenApiHandler[R <: UserSearchRepo] extends UserHandler[ZIO[R, Throwable, *]] {
+final class UserSearchOpenApiHandler[R <: UserSearchRepo with DepartmentSearchRepo]
+    extends UserHandler[ZIO[R, Throwable, *]] {
   type F[A] = ZIO[R, Throwable, A]
 
   import UserEntity._
-  import com.jc.user.search.api.openapi.definitions.{User, UserSearchResponse}
+  import DepartmentEntity._
+
   import io.scalaland.chimney.dsl._
+
+  override def getDepartment(respond: GetDepartmentResponse.type)(id: String): F[GetDepartmentResponse] = {
+    ZIO
+      .accessM[DepartmentSearchRepo] { env =>
+        env.get.find(id.asDepartmentId).map {
+          case Some(dep) => respond.Ok(dep.transformInto[Department])
+          case None => respond.NotFound
+        }
+      }
+      .mapError[Throwable](e => new Exception(e))
+  }
+
+  override def searchDepartments(respond: SearchDepartmentsResponse.type)(
+    query: Option[String],
+    page: Int,
+    pageSize: Int,
+    sort: Option[Iterable[String]]): F[SearchDepartmentsResponse] = {
+    ZIO
+      .accessM[DepartmentSearchRepo] { env =>
+        val ss = sort.getOrElse(Seq.empty).map(UserSearchOpenApiHandler.toFieldSort)
+
+        env.get.search(query, page, pageSize, ss)
+      }
+      .fold(
+        e => respond.BadRequest(ExpectedFailure.getMessage(e)),
+        r => {
+          val items = r.items.map(_.transformInto[Department]).toVector
+          respond.Ok(DepartmentSearchResponse(items, r.page, r.pageSize, r.count))
+        }
+      )
+  }
+
+  override def suggestDepartments(respond: SuggestDepartmentsResponse.type)(
+    query: Option[String]): F[SuggestDepartmentsResponse] = {
+    ZIO
+      .accessM[DepartmentSearchRepo] { env => env.get.suggest(query.getOrElse("")) }
+      .fold(
+        e => respond.BadRequest(ExpectedFailure.getMessage(e)),
+        r => {
+          val items = r.items
+            .map(
+              _.into[PropertySuggestion]
+                .withFieldComputed(_.suggestions, v => v.suggestions.map(_.transformInto[TermSuggestion]).toVector)
+                .transform)
+            .toVector
+          respond.Ok(DepartmentSuggestResponse(items))
+        }
+      )
+  }
+
+  override def getUser(respond: GetUserResponse.type)(id: String): F[GetUserResponse] = {
+    ZIO
+      .accessM[UserSearchRepo] { env =>
+        env.get.find(id.asUserId).map {
+          case Some(user) => respond.Ok(user.transformInto[User])
+          case None => respond.NotFound
+        }
+      }
+      .mapError[Throwable](e => new Exception(e))
+  }
 
   override def searchUsers(respond: SearchUsersResponse.type)(
     query: Option[String],
@@ -31,7 +105,7 @@ final class UserSearchOpenApiHandler[R <: UserSearchRepo] extends UserHandler[ZI
     pageSize: Int,
     sort: Option[Iterable[String]] = None): F[SearchUsersResponse] = {
     ZIO
-      .accessM[R] { env =>
+      .accessM[UserSearchRepo] { env =>
         val ss = sort.getOrElse(Seq.empty).map(UserSearchOpenApiHandler.toFieldSort)
 
         env.get.search(query, page, pageSize, ss)
@@ -45,10 +119,9 @@ final class UserSearchOpenApiHandler[R <: UserSearchRepo] extends UserHandler[ZI
       )
   }
 
-  override def suggestUsers(respond: SuggestUsersResponse.type)(
-    query: Option[String]): ZIO[R, Throwable, SuggestUsersResponse] = {
+  override def suggestUsers(respond: SuggestUsersResponse.type)(query: Option[String]): F[SuggestUsersResponse] = {
     ZIO
-      .accessM[R] { env => env.get.suggest(query.getOrElse("")) }
+      .accessM[UserSearchRepo] { env => env.get.suggest(query.getOrElse("")) }
       .fold(
         e => respond.BadRequest(ExpectedFailure.getMessage(e)),
         r => {
@@ -61,17 +134,6 @@ final class UserSearchOpenApiHandler[R <: UserSearchRepo] extends UserHandler[ZI
           respond.Ok(UserSuggestResponse(items))
         }
       )
-  }
-
-  override def getUser(respond: GetUserResponse.type)(id: String): F[GetUserResponse] = {
-    ZIO
-      .accessM[R] { env =>
-        env.get.find(id.asUserId).map {
-          case Some(user) => respond.Ok(user.transformInto[User])
-          case None => respond.NotFound
-        }
-      }
-      .mapError[Throwable](e => new Exception(e))
   }
 }
 
@@ -87,7 +149,7 @@ object UserSearchOpenApiHandler {
         SearchRepository.FieldSort(sort, true)
     }
 
-  def httpRoutes[E <: UserSearchRepo]: HttpRoutes[ZIO[E, Throwable, *]] = {
+  def httpRoutes[E <: UserSearchRepo with DepartmentSearchRepo]: HttpRoutes[ZIO[E, Throwable, *]] = {
     import zio.interop.catz._
     import sttp.tapir.server.http4s.ztapir._
     val yaml = Source.fromResource("UserSearchOpenApi.yaml").mkString
